--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,27 +11,24 @@ description = "A commandline-utility to interactively build complex shell pipeli
 
 keywords = ["shell", "cli", "terminal", "utility", "tool"]
 categories = ["command-line-utilities", "development-tools", "text-editors"]
-exclude = [
-"build_docker.sh",
-"showcase.gif",
-]
+exclude = ["build_docker.sh", "showcase.gif"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tui = { version = "0.10", default-features = false, features = ['crossterm'] }
-config = { version = "0.11", features = ['toml'] }
-crossterm = { version = "0.22", features = ['event-stream'] }
-failure = "0.1.6"
-itertools = "0.10"
-unicode-width = "0.1.5"
-which = "4.0"
-getopts="0.2"
+config = { version = "0.15.11", default-features = false, features = ['toml'] }
+crossterm = "0.29.0"
+anyhow = "1.0"
+itertools = "0.14"
+unicode-width = "0.2.0"
+which = "7.0.3"
+getopts = "0.2"
 maplit = "1.0"
 atty = "0.2"
-tokio = { version = "0.2", features = ["full"] }
-futures = "0.3.4"
-syntect = "4.1.0"
+crossbeam-channel = "0.5"
+syntect = "5.2.0"
 lazy_static = "1.4.0"
-ansi-parser = "0.8"
-
+ansi-to-tui = "7.0.0"
+ratatui = { version = "0.29.0", features = ["all-widgets"] }
+libc = "0.2.172"
+wait-timeout = "0.2.1"
